# workshop_airflow_jornada

./: README.md  exemplo_00.py  exemplo_01.py  pyproject.toml
frontend/: Dockerfile  entrypoint.sh  exemplo_04.py  pyproject.toml
frontend/pipeline/: pipeline.py
