[project]
name = "workshop-airflow-jornada"
version = "0.1.0"
description = ""
authors = [
    {name = "Raphael Pylypiec",email = "rpylypiec@outlook.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
